{
  "version": 4,
  "terraform_version": "1.2.1",
  "serial": 215,
  "lineage": "1d867168-074e-7e91-ff72-2639b0dc21e2",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "aurora_serverless_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:234114981069:security-group/sg-04e6d95c4d97e1390",
            "description": "security group for serverless wordpress mysql aurora",
            "egress": [],
            "id": "sg-04e6d95c4d97e1390",
            "ingress": [],
            "name": "metacrilatos.net_aurora_mysql_sg",
            "name_prefix": "",
            "owner_id": "234114981069",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0be1ae9f4771cad32"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "efs_security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:234114981069:security-group/sg-0daa75d1c95b7594d",
            "description": "security group for wordpress",
            "egress": [],
            "id": "sg-0daa75d1c95b7594d",
            "ingress": [],
            "name": "metacrilatos_efs_sg",
            "name_prefix": "",
            "owner_id": "234114981069",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0be1ae9f4771cad32"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "wordpress_security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:234114981069:security-group/sg-0cd7f1d812972bc7b",
            "description": "security group for wordpress",
            "egress": [],
            "id": "sg-0cd7f1d812972bc7b",
            "ingress": [],
            "name": "metacrilatos_wordpress_sg",
            "name_prefix": "",
            "owner_id": "234114981069",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0be1ae9f4771cad32"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "aurora_sg_ingress_3306",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Ingress on mySQL port to Aurora Serverless",
            "from_port": 3306,
            "id": "sgrule-3192617851",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-04e6d95c4d97e1390",
            "self": false,
            "source_security_group_id": "sg-0cd7f1d812972bc7b",
            "to_port": 3306,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.aurora_serverless_group",
            "aws_security_group.wordpress_security_group"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "efs_ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Ingress to EFS mount from Wordpress container",
            "from_port": 2049,
            "id": "sgrule-69067659",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0daa75d1c95b7594d",
            "self": false,
            "source_security_group_id": "sg-0cd7f1d812972bc7b",
            "to_port": 2049,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.efs_security_group",
            "aws_security_group.wordpress_security_group"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "wordpress_sg_egress_2049",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Egress to EFS mount from Wordpress container",
            "from_port": 2049,
            "id": "sgrule-2063190989",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0cd7f1d812972bc7b",
            "self": false,
            "source_security_group_id": "sg-0daa75d1c95b7594d",
            "to_port": 2049,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.efs_security_group",
            "aws_security_group.wordpress_security_group"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "wordpress_sg_egress_3306",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Egress from Wordpress container to Aurora Database",
            "from_port": 3306,
            "id": "sgrule-3430213014",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0cd7f1d812972bc7b",
            "self": false,
            "source_security_group_id": "sg-04e6d95c4d97e1390",
            "to_port": 3306,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.aurora_serverless_group",
            "aws_security_group.wordpress_security_group"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "wordpress_sg_egress_443",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Egress from Wordpress container to world on HTTPS",
            "from_port": 443,
            "id": "sgrule-2456526274",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0cd7f1d812972bc7b",
            "self": false,
            "source_security_group_id": null,
            "to_port": 443,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.wordpress_security_group"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "wordpress_sg_egress_80",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Egress from Wordpress container to world on HTTP",
            "from_port": 80,
            "id": "sgrule-1563466458",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0cd7f1d812972bc7b",
            "self": false,
            "source_security_group_id": null,
            "to_port": 80,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.wordpress_security_group"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "wordpress_sg_ingress_80",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow ingress from world to Wordpress container",
            "from_port": 80,
            "id": "sgrule-3831048196",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0cd7f1d812972bc7b",
            "self": false,
            "source_security_group_id": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.wordpress_security_group"
          ]
        }
      ]
    },
    {
      "module": "module.codebuild",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "codebuild_security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:234114981069:security-group/sg-0cb67f4d64aa40f52",
            "description": "security group for codebuild",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0cb67f4d64aa40f52",
            "ingress": [],
            "name": "metacrilatos_codebuild_sg",
            "name_prefix": "",
            "owner_id": "234114981069",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0be1ae9f4771cad32"
          },
          "sensitive_attributes": []
        }
      ]
    }
  ]
}